# cpa-packet

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.beads/: issues.jsonl
.beads/.br_history/: issues.20260303_163140.jsonl  issues.20260303_163239.jsonl  issues.20260303_163325.jsonl  issues.20260303_163436.jsonl  issues.20260303_163533.jsonl  issues.20260303_163611.jsonl  issues.20260303_163641.jsonl  issues.20260303_163730.jsonl  issues.20260303_163855.jsonl  issues.20260303_164025.jsonl  issues.20260303_164101.jsonl  issues.20260303_164746.jsonl  issues.20260303_165042.jsonl  issues.20260303_165124.jsonl  issues.20260303_183415.jsonl  issues.20260303_184435.jsonl  issues.20260303_184526.jsonl  issues.20260303_184559.jsonl  issues.20260303_184624.jsonl  issues.20260303_184647.jsonl  issues.20260303_184733.jsonl  issues.20260303_184830.jsonl  issues.20260303_185004.jsonl  issues.20260304_231136.jsonl
.githooks/: pre-commit
.github/workflows/: build-smoke.yml  lint.yml  privacy-check.yml  python-tests.yml  schema-version-test.yml  secrets-scan.yml  typecheck.yml
docs/: auth_setup.md  cpa_output_build_spec.md
scripts/: precommit_pii_scan.py
src/cpapacket/: __init__.py  tax_tracker.py
tests/: conftest.py  test_schema_versions.py
tests/core/: test_filesystem.py
tests/test_cli/: __init__.py  test_balance_sheet.py  test_build.py  test_build_gusto_absent.py  test_build_integration.py  test_build_skip.py  test_build_valid_args.py  test_check.py  test_contractor_summary.py  test_distributions.py  test_doctor.py  test_entrypoint.py  test_main.py  (+7 more)
(+188 files in other folders)
