[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cpapacket"
version = "0.1.0"
description = "CLI tool to generate CPA-ready tax reporting packets"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "cpapacket contributors" }
]
license = { text = "Proprietary" }
dependencies = [
  "click>=8.1.7,<9.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "reportlab>=4.2.0,<5.0.0",
  "rich>=13.7.0,<14.0.0",
  "keyring>=25.2.0,<26.0.0",
  "platformdirs>=4.2.0,<5.0.0",
]

[project.scripts]
cpapacket = "cpapacket.cli.main:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "respx>=0.21.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
  "mypy>=1.10.0,<2.0.0",
  "pdfplumber>=0.11.0,<1.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --cov=cpapacket --cov-fail-under=85"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]
packages = ["cpapacket"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/cpapacket"]
